Add code for release of 2.0